# FacialRecognition

./: CMakeLists.txt
CoreObjects/: Recording.cpp  Recording.hpp
NormalizeFaceImages/: ClassCroppingStats.cpp  ClassCroppingStats.hpp  FaceCropper.cpp  FaceCropper.hpp  normalizeFaceImagesMain.cpp
Recognition/: DataSplitter.cpp  DataSplitter.hpp  Dictionary.cpp  Dictionary.hpp  L1CostFunction.cpp  L1CostFunction.hpp  SharedUtils.cpp  SharedUtils.hpp  gradDescentDictionaryLearner.cpp  wrightLearningMain.cpp
Utilities/: MatToMatrixConversions.cpp  MatToMatrixConversions.hpp  xmlRecordingsLoader.cpp  xmlRecordingsLoader.hpp
